Properly show and change units (between imperial and metric)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="styles.css">
-  <script src="scripts.js"></script>
+  <script src="scripts.js" defer></script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,15 +12,16 @@
   <div>
     <input type="text" name="city" id="inputCity" placeholder="Search City">
     <button id="search">Search</button>
+    <button id="inputUnits">°C</button>
   </div>
   <div id="name"></div>
   <div id="country"></div>
-  <div><span id="temp"></span><span class="unints">°C</span></div>
+  <div><span id="temp"></span><span class="units">°C</span></div>
   <div><span>Feels like: </span><span id="feels_like"></span><span class="units">°C</span></div>
   <div><span>Humidity: </span><span id="humidity"></span><span>%</span></div>
   <div><span id="temp_max"></span><span class="units">°C</span></div>
   <div><span id="temp_min"></span><span class="units">°C</span></div>
   <div id="weather_main"></div>
-  <div><span>Wind: </span><span id="wind_speed"></span><span>m/s</span></div>
+  <div><span>Wind: </span><span id="wind_speed"></span><span id="windSpeedUnit">km/h</span></div>
 </body>
 </html>
