--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
     <button id="inputUnits">°C</button>
   </div>
   <div class="info">
-    <div id="name"></div>
-    <div id="country"></div>
-    <div id="weather_main"></div>
-    <div><span id="temp"></span><span class="units">°C</span></div>
+    <div><span class="big" id="name"></span><span id="country"></span></div>
+    <div class="big" id="weather_main"></div>
+    <div class="big"><span id="temp"></span><span class="units">°C</span></div>
+    <div><span>Feels like: </span><span id="feels_like"></span><span class="units">°C</span></div>
     <div><span>Max: </span><span id="temp_max"></span><span class="units">°C</span></div>
     <div><span>Min: </span><span id="temp_min"></span><span class="units">°C</span></div>
-    <div><span>Feels like: </span><span id="feels_like"></span><span class="units">°C</span></div>
     <div><span>Humidity: </span><span id="humidity"></span><span>%</span></div>
     <div><span>Wind: </span><span id="wind_speed"></span><span id="windSpeedUnit">km/h</span></div>
   </div>
